--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Crypto Currency App</string>
     <string name="title_activity_wallet">WalletActivity</string>
     <string name="title_activity_my_wallet">My Wallet</string>
-    <string name="title_add_crypto">Add</string>
+    <string name="title_add_crypto">Edit</string>
     <string name="title_top_crypto">Cryptocurrency</string>
     <string name="title_exchange">Exchange</string>
     <string name="textview">TextView</string>
