--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="title_add_crypto">Edit</string>
     <string name="title_top_crypto">Cryptocurrency</string>
     <string name="title_exchange">Exchange</string>
-    <string name="textview">TextView</string>
+    <string name="title_about">About Us</string>
 </resources>
